# Gready

./: CMakeLists.txt  README  README.md  TODO.md  gready.cpp  gready.h  gready.kdev4  main.cpp
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  ui_mainwindow.h
reader/: article.cpp  article.h  feed.cpp  feed.h  reader.cpp  reader.h  tag.cpp  tag.h
